updated gitignore and added example template for application.properties.example
and mvnwrapper

--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,14 @@ target/
 build/
 !**/src/main/**/target/
 !**/src/test/**/target/
-!.mvn/wrapper/maven-wrapper.jar
+
+# Maven wrapper (keep everything in .mvn/wrapper)
+.mvn/wrapper/maven-wrapper.jar
+!.mvn/wrapper/maven-wrapper.properties
 
 # =========================
 # IDE files
 # =========================
-
 ### IntelliJ IDEA ###
 .idea/
 *.iws
