--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -3,7 +3,7 @@ spring.application.name=demo
 server.port=yourport
 
 #MySQL connection
-spring.datasource.url=jdbc:mysql://localhost:3306/parkingappdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/parkingappdb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Europe/Helsinki
 spring.datasource.username=YOURUSERNAME
 spring.datasource.password=YOURPASSWORD
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
